--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <div style="flex:1;min-width:220px">
         <label class="small">Burimi i parazgjedhur i fjalorit</label>
         <select id="wlSource">
-          <option value="https://raw.githubusercontent.com/its0x08/albanian-wordlist/main/shqip.txt">its0x08 / albanian-wordlist (shqip.txt)</option>
+          <option value="fjalor.txt">Fjalori nga kjo faqe (lokal)</option>
+
           <option value="builtin">Fjalor i vogël (i parazgjedhur, offline)</option>
         </select>
         <div class="small" style="margin-top:6px">Nëse ke URL të vetë file raw .txt, ngjitje/shtyp atë këtu dhe përdoresh "Ngarkoji"</div>
@@ -208,4 +209,6 @@ document.getElementById('wlCount').textContent = 'parazgjedh: builtin (test)';
 </script>
 </body>
 </html>
+
+
 
